# P-KNN

./: Dockerfile.cpu  Dockerfile.gpu  P_KNN.py  P_KNN_CPU.py  P_KNN_GPU.py  README.md  environment.yml  pyproject.toml  setup.py
P_KNN/: P_KNN.py  P_KNN_config.py  P_KNN_memory_estimator.py
manuscript_codes/: 00P_KNN_dbNSFPClinVarBenchmarking.ipynb  01P_KNN_Concept_figure.ipynb  02P_KNN_calibration_GPU_simulation.ipynb  03P_KNN_CPU_ClingenData.ipynb  03P_KNN_GPU_ClingenData.ipynb  04P_KNN_GPU_MetaPredictor.ipynb  05P_KNN_GPU_DifferentTime.ipynb  06P_KNN_GPU_ESMDMS.ipynb  07PKNN_GPU_best7_revision.ipynb  08BRCAexchange.ipynb  ANNOVAR.bash  ANNOVAR_gnomAD.bash
