[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "P_KNN"
version = "1.0.1"
description = "P-KNN command line tool"
authors = [
    {name = "Po-Yu Lin and Nadav Brandes"}
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "pandas>=1.5",
    "scikit-learn>=1.2",
    "tqdm>=4.60",
    "huggingface_hub>=0.16"
]

[project.optional-dependencies]
gpu = ["torch>=2.0"]
cpu = ["joblib>=1.2"]
all = ["torch>=2.0", "joblib>=1.2"]

[project.scripts]
P_KNN = "P_KNN.P_KNN:main"
P_KNN_config = "P_KNN.P_KNN_config:main"
P_KNN_memory_estimator = "P_KNN.P_KNN_memory_estimator:main"